--- a/day10/magh8.ipynb
+++ b/day10/magh8.ipynb
@@ -574,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AI",
+   "display_name": "prabin",
    "language": "python",
    "name": "python3"
   },
@@ -588,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
